feat: switched to java 25 with preview features